# hough_transformation

./: .gitignore  find_lines.py  generate_data.py  pyproject.toml
configs/: config.yml  config_1.yml
src/: functions.py  objects.py  types.py
src/argparser/: __init__.py  parser.py  settings.py
src/datagenerator/: README.md  __init__.py  datagenerator.py
src/linefinder/: __init__.py  linesfinder.py  pointsfinder.py
src/plotter/: plotter.py
