[project]
name = "hough"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "h5py>=3.13.0",
    "matplotlib>=3.10.1",
    "numpydantic>=1.6.8",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "pyyaml>=6.0.2",
    "scipy>=1.15.2",
]

[dependency-groups]
dev = [
    "expects>=0.9.0",
    "pytest>=8.3.5",
    "ruff>=0.11.0",
]
